--- a/amazonproject/1index.html
+++ b/amazonproject/1index.html
@@ -15,7 +15,7 @@
           </div>
 
             <div class="nav-address border">
-              <p class="add-first">deliver to.</p>
+              <p class="add-first">deliver to</p>
               <div class="add-icon">
                 <i class="fa-solid fa-location-dot"></i>
                  <p  class="add-sec">india</p>
